2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Specification): Uncomment 
	material on node quoting, and add advice not to use it until 
	it's more widely supported.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (@variable_string_settables): Add 
	'INFO_SPECIAL_CHARS_QUOTE'.
	* tp/Texinfo/Convert/Info.pm (_node) <INFO_SPECIAL_CHARS_QUOTE>: 
	Add quoting characters around node name if required.
	* tp/Texinfo/Convert/Plaintext.pm (_convert) <xrefs and menus>
	<INFO_SPECIAL_CHARS_QUOTE>: Add quoting characters around 
	segments of cross-references and menu entries if they contain 
	problematic characters.
	<xrefs> <INFO_SPECIAL_CHARS_WARNING>: Warn if a node name 
	contains a full stop even if it is not followed by whitespace, 
	as this still breaks readers.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_enumerate_command): Use
	<ol start="NUMBER"> for numeric argument other than 1.

2015-08-12  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.texi (@code{@@enumerate}): be clearer that
	@enumerate 0 is allowed, but signed numbers are not.

2015-08-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_target): Always canonicalize
	target nodename.
	* info/t/xref-across-lines.sh: New test.

2015-08-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (apropos_in_all_indices): Check if there is no 
	filename, to avoid crash with "info -k" when there is a 
	malformed dir entry.  Crash reported by Ivan Pacheco, and cause 
	of crash discovered by Sergey Poznyakoff.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Indices): Remove unnecessary cross-reference.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (_scroll_forward, _scroll_backward): Set point 
	at beginning (resp. end) of node if going backwards (resp.  