@@ -1,5 +1,11 @@
 2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
+	* tp/Texinfo/Convert/XSParagraph/xspara.c: Update some comments 
+	and remove some commented-out code.
+
+2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* doc/texinfo.texi (Info Format Specification): Uncomment 
 	material on node quoting, and add advice not to use it until 
 	it's more widely supported.
